# sphinx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BST/: BST.h  BST_tests.cpp  CMakeLists.txt
SSDLog/: CMakeLists.txt  SSDLog.h  SSDLog_tests.cpp
benchmark/: CMakeLists.txt  benchmark_extra_bits.cpp  benchmark_load_factor_query_insert.cpp  benchmark_main.cpp  benchmark_mixed.cpp  benchmark_multi_threaded.cpp  benchmark_read_latency2.cpp  benchmark_tail.cpp  benchmark_xdp.cpp  combined.py  consts.py  extra_bits.py  lf.py  main_exp.py  main_exp_mem.py  main_exp_mem_ptr.py  main_exp_zipf.py  mem_fpr.py  reproducibility.md  tail.py
benchmark/data-extra-bits/: benchmark_Fleck_ExtraBits1.csv  benchmark_Fleck_ExtraBits2.csv  benchmark_Fleck_ExtraBits4.csv  benchmark_Fleck_ExtraBits4.csv.old  benchmark_Fleck_ExtraBits6.csv  benchmark_InfiniFilter.csv  benchmark_InfiniFilter_InMemory.csv  testav.py
benchmark/data-lf/: benchmark_DHT.csv  benchmark_Fleck.csv  benchmark_Perfect_HT.csv  benchmark_RSQF-Static.csv
benchmark/data-memory/: benchmark_DHT.csv  benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF-Static.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv  benchmark_XDP.csv
benchmark/data-memory-zipf/: benchmark_DHT.csv  benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv  benchmark_XDP.csv
benchmark/data-mt/: throughput_vs_threads_4ReserveBitsssd.csv  throughput_vs_threads_ssd.csv
benchmark/data-optane/: benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv
benchmark/data-optane-zipf/: benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv
benchmark/data-skew/: read_latency.csv
benchmark/data-ssd/: benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv  testav.py
benchmark/data-ssd-zipf/: benchmark_InfiniFilter.csv  benchmark_Perfect_HT.csv  benchmark_RSQF.csv  benchmark_Sphinx-Loop.csv  benchmark_Sphinx-ReserveBits4.csv  benchmark_Sphinx.csv
benchmark/data-tail/: infinifilter_fpr.txt  infinifilter_fpr_ssd.txt
benchmark/recorder/: CMakeLists.txt  recorder.h  recorder_tests.cpp
bitset_wrapper/: CMakeLists.txt  bitset_wrapper.h  bitset_wrapper_tests.cpp
block/: CMakeLists.txt  block.h  block_tests.cpp
buffer_pool2/: CMakeLists.txt  buffer_pool2.h  buffer_pool2_tests.cpp
config/: CMakeLists.txt  config.h
directory/: CMakeLists.txt  directory.h  directory_tests.cpp
extension_block/: CMakeLists.txt  extension_block.h  extension_block_tests.cpp
fingerprint_gen_helper/: CMakeLists.txt  fingerprint_gen_helper.h
hashing/: CMakeLists.txt  hashing.h  hashing_tests.cpp
hashtable/: CMakeLists.txt  hashtable.cpp  hashtable.h  hashtable_tests.cpp
lib/Catch2/docs/: Readme.md  assertions.md  benchmarks.md  ci-and-misc.md  command-line.md  configuration.md  contributing.md  deprecations.md  faq.md  generators.md  limitations.md  logging.md  matchers.md  other-macros.md  own-main.md  release-notes.md  reporters.md  tostring.md  tutorial.md  usage-tips.md  why-catch.md
lib/Catch2/examples/: 030-Asn-Require-Check.cpp
lib/Catch2/extras/: catch_amalgamated.cpp
lib/Catch2/src/: CMakeLists.txt
lib/Catch2/src/catch2/: catch_approx.cpp  catch_test_case_info.cpp  catch_version.cpp  meson.build
lib/Catch2/src/catch2/benchmark/detail/: catch_stats.cpp
lib/Catch2/src/catch2/generators/: catch_generators_random.cpp
lib/Catch2/src/catch2/interfaces/: catch_interfaces_exception.cpp  catch_interfaces_reporter.cpp
lib/Catch2/src/catch2/internal/: catch_assertion_handler.cpp  catch_clara.cpp  catch_commandline.cpp  catch_decomposer.cpp  catch_fatal_condition_handler.cpp  catch_floating_point_helpers.cpp  catch_istream.cpp  catch_list.cpp  catch_polyfills.cpp  catch_random_seed_generation.cpp  catch_reporter_registry.cpp  catch_result_type.cpp  catch_run_context.cpp  catch_section.cpp  catch_tag_alias_registry.cpp  catch_test_case_registry_impl.cpp  catch_textflow.cpp  catch_uncaught_exceptions.cpp  catch_xmlwriter.cpp
lib/Catch2/src/catch2/matchers/: catch_matchers_floating_point.cpp
lib/Catch2/src/catch2/reporters/: catch_reporter_console.cpp
lib/Catch2/tests/SelfTest/IntrospectiveTests/: FloatingPoint.tests.cpp  InternalBenchmark.tests.cpp  RandomNumberGeneration.tests.cpp  Reporters.tests.cpp  String.tests.cpp
lib/Catch2/tests/SelfTest/TimingTests/: Sleep.tests.cpp
lib/Catch2/tests/SelfTest/UsageTests/: Approx.tests.cpp  Compilation.tests.cpp  Generators.tests.cpp  Message.tests.cpp
lib/ConQueue/: CMakeLists.txt  concurrentqueue.h
lib/memento/: CMakeLists.txt  memento.hpp  tmp.txt
lib/xxhash/: CMakeLists.txt  xxhash64.h
lib/zipfYCSB/: CMakeLists.txt  zipfian_generator.h
payload/: CMakeLists.txt  payload.h  payload_tests.cpp
segment/: CMakeLists.txt  segment.h  segment_tests.cpp
xdp/: CMakeLists.txt  xdp.h  xdp_tests.cpp
